...
                                  BorderRadius.circular(10.0), // Arredondamento
                            ),
                          ),
                          minimumSize: MaterialStateProperty.all<Size>(
                              const Size(100.0, 40.0)),
                        ),
                        child: const Text("Voltar ao Início")),
                    TextButton(
                      onPressed: () => Navigator.of(context).pop(true),
                      style: ButtonStyle(
                        backgroundColor: MaterialStateProperty.all<Color>(
                            const Color(0xFF35BCD4)),
                        foregroundColor:
...
                                BorderRadius.circular(10.0), // Arredondamento
                          ),
                        ),
                        minimumSize: MaterialStateProperty.all<Size>(
                            const Size(50.0, 40.0)),
                      ),
                      child: const Text("Ok"),
                    )
                  ],
                ),
              ],
            );
          });
...
