...
                    ),
                  ),
                  onPressed: () {
                    GoRouter.of(context).go('/Create');
                  },
                  child: const Text(
                    "Criar Novo Lembrete",
                    style: TextStyle(color: Colors.white),
                  ),
                ),
              ),
              Expanded(
                  child: FutureBuilder<List<EventData>?>(
...
