...
                                                  BorderRadius.circular(10.0), // Arredondamento
                                                ),
                                              ),
                                              minimumSize: MaterialStateProperty.all<Size>(
                                                  const Size(100.0, 40.0)),
                                            ),
                                            child: const Text("Sim")),
                                        TextButton(
                                          onPressed: () =>  Navigator.of(context).pop(true),
                                          style: ButtonStyle(
                                            backgroundColor: MaterialStateProperty.all<Color>(
                                                 Colors.red),
                                            foregroundColor:
...
